# PluginPlay

./: .buildinfo  .clang-format  .codedocs  .gitignore  .gitlab-ci.yml  .licenserc.yaml  .travis.yml  CMakeLists.txt  Jenkinsfile  NWChemExBase  README.md  faqs.html  features.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
SDE/: BasisSetFileParser.cpp  BasisSetFileParser.hpp  CMakeLists.txt  Cache.hpp  ChemistryRuntime.cpp  ChemistryRuntime.hpp  ComputedProperties.hpp  Memoization.hpp  Module.cpp  Module.hpp  ModuleBase.hpp  ModuleGraph.hpp  ModuleHelpers.hpp  ModuleIO.hpp  ModuleInput.cpp  ModuleInput.hpp  ModuleLoader.hpp  ModuleManager.cpp  ModuleManager.hpp  ModuleOutput.cpp  ModuleOutput.hpp  ModuleResult.cpp  ModuleResult.hpp  MoleculeFileParser.cpp  MoleculeFileParser.hpp  NWXDefaults.hpp  Option.hpp  Parameters.hpp  Property.hpp  PropertyBase.hpp  PropertyType.hpp  Pythonization.hpp  SDEAny.hpp  SDETraits.hpp  Serialization.hpp  SubmoduleRequest.cpp  SubmoduleRequest.hpp  SubmoduleRequestForm.cpp  SubmoduleRequestForm.hpp  Types.hpp  (+3 more)
SDE/Defaults/: DefaultAM.cpp  DefaultAtoms.cpp  DefaultBases.cpp  DefaultIsotopes.cpp  DefaultModuleTypes.hpp  DefaultMols.cpp  DefaultSymbols.cpp  PhysicalConstants.cpp
SDE/PyBindings/: ExportSDE.cpp  PyModule.cpp  PyModule.hpp  PyModuleManager.cpp  PyParameters.cpp  PyParameters.hpp  PySmartEnums.hpp  Pythonize.cpp  __init__.py
SDE/attic/: ComputedProperties.hpp  Module.hpp  ModuleBase.cpp  ModuleBase.hpp  ModuleManager.cpp  ModuleManager.hpp  Option.hpp  Parameters.hpp  Property.hpp  Pythonization.hpp  Serialization.hpp  SubmoduleRequestForm.cpp  SubmoduleRequestForm.hpp
SDE/attic/PyBindings/: ExportSDE.cpp  PyModule.cpp  PyModuleManager.cpp  PyParameters.cpp  PySmartEnums.hpp  __init__.py
SDE/detail_/: Cache.hpp  IOMap.hpp  Memoization.hpp  ModuleIO.cpp  ModuleIOOptions.hpp  ModuleIOTraits.hpp  ModuleInputBuilder.hpp  ModuleInputPIMPL.hpp  ModuleManagerPIMPL.hpp  ModuleOutputBuilder.hpp  ModulePIMPL.hpp  ModuleResultPIMPL.hpp  ModuleState.hpp  ModuleStateBuilder.hpp  PropertyTypeBuilder.hpp  PropertyTypeInputBuilder.hpp  PropertyTypeOutputBuilder.hpp  SDEAny.hpp  Serializer.hpp  SubmoduleRequestPIMPL.hpp
SDE_Test/: CMakeLists.txt  DummyModule.cpp  DummyParameters.cpp  PySDEUtils.cpp  TestBasisFileParser.cpp  TestCache.cpp  TestChemistryRuntime.cpp  TestComputedProperties.cpp  TestIOMap.cpp  TestModule.cpp  TestModule.py  TestModuleHelpers.cpp  TestModuleIO.cpp  TestModuleInput.cpp  TestModuleLoader.cpp  TestModuleManager.cpp  TestModuleManager.py  TestModuleOutput.cpp  TestModuleResult.cpp  TestMoleculeFileParser.cpp  TestParameters.cpp  TestParameters.py  TestProperty.cpp  TestProperty.py  TestPropertyBase.cpp  TestSDEAny.cpp  TestSDEAny.py  TestSubmoduleRequest.cpp  TestSubmoduleRequestForm.cpp  TestUtility.cpp  __init__.py  cc-pvdz.gbs
SDE_Test/attic/: PySDEUtils.cpp  TestCache.cpp  TestComputedProperties.cpp  TestModule.cpp  TestModule.py  TestModuleHelpers.cpp  TestModuleManager.cpp  TestParameters.cpp  TestProperty.cpp  TestSDEAny.cpp  TestSubmoduleRequestForm.cpp
SDE_Test/detail_/: TestModuleInputPIMPL.cpp  TestModuleManagerPIMPL.cpp  TestModulePIMPL.cpp  TestModuleResultPIMPL.cpp  TestPropertyTypeBuilder.cpp  TestSDEAny.cpp  TestSubmoduleRequestPIMPL.cpp
SDE_Test/examples/: Modules.hpp  TestModuleBase.cpp  TestModuleBase.hpp  TestModuleBase.py  TestPropertyType.cpp  TestPropertyType.hpp  TestWorkflow.cpp  TestWorkflow.hpp  TestWorkflow.py  modules.cpp
SDE_Test/uses_cases/: TestPropertyType.cpp
tests/: CMakeLists.txt  README.md  bounds_checking.cpp  field_tuple.cpp  module.cpp  module.py  module_base.cpp  module_input.cpp  module_manager.cpp  module_result.cpp  submodule_request.cpp  test_common.hpp  test_main.cpp  utility.cpp
tests/cache/: cache.cpp
tests/cxx/doc_snippets/: coulombs_law.cpp  electric_field.hpp  export_electric_field.hpp  export_pluginplay_examples.cpp  export_point_charge.hpp  force.cpp  force.hpp  load_modules.cpp  main.cpp  modules.hpp  screened_coulombs_law.cpp  templated_coulombs_law.cpp  test_modules.cpp  test_tutorial_module_documents.cpp
tests/cxx/integration_tests/: blank_test.cpp
tests/cxx/regression_tests/: issue_350.cpp  main.cpp
tests/detail_/: CMakeLists.txt  archive.cpp  facade_module.cpp  field_tuple_traits.cpp  hashing.cpp  lambda_module.cpp  module_input_pimpl.cpp  module_manager_pimpl.cpp  module_pimpl.cpp  module_result_pimpl.cpp  printing.cpp  property_type_builder.cpp  rest_printer.cpp  sde_any.cpp  sde_any_wrapper.cpp  serialization.cpp  submodule_request_pimpl.cpp
tests/docs/: coulombs_law.cpp  electric_field.hpp  force.cpp  force.hpp  generate_module_documentation.cpp  load_modules.cpp  load_modules.hpp  module_cache.cpp  modules.hpp  point_charge.hpp  screened_coulombs_law.cpp
tests/docs/modules/: coulombs_law.cpp  electric_field.hpp  point_charge.hpp  templated_coulombs_law.cpp
tests/examples/: CMakeLists.txt  cxx_workflow.cpp  lambda_module.cpp  module_base.cpp  module_base.hpp  module_base.py  packaging.hpp  property_type.cpp  property_type.hpp  property_type.py  python_workflow.py  workflow.cpp  workflow.hpp  workflow.py  writing_a_module.cpp  writing_a_module.hpp  writing_a_module_loader.hpp  writing_a_property_type.cpp  writing_a_property_type.hpp
tests/pluginplay/: bounds_checking.cpp  module.cpp  module_base.cpp  module_input.cpp  module_manager.cpp  module_result.cpp  submodule_request.cpp  test_common.hpp  test_main.cpp  utility.cpp
tests/pluginplay/any/: any.cpp  any_field.cpp  any_input.cpp  any_result.cpp  test_any.hpp
tests/pluginplay/cache/: cache.cpp  lexical_cast.hpp  module_cache.cpp  module_manager_cache.cpp  proxy_map_maker.cpp  test_cache.hpp  user_cace.cpp  user_cache.cpp  uuid_mapper.cpp
tests/pluginplay/database/: lexical_cast.cpp  value.cpp
tests/printing/: CMakeLists.txt  document_module.cpp  document_modules.cpp  helpers.cpp
tests/property_type/: field_tuple.cpp  property_type.cpp  traits.cpp
tests/type_traits/: base_property_type.cpp  is_property_type.cpp
(+2523 files in other folders)
